# bwa_win32

./: .gitmodules  CMakeLists.txt  README.md
bwa_windows_port/: __sync_fetch_and_add.c  __sync_fetch_and_add.h  bwa_win32.h  getrusage-windows.c  getrusage-windows.h  index.c  mmap_win32.h  unistd.h  win-gettimeofday.h
bwa_windows_port/sys/: cdefs.h  mman.h  resource.h  time.h  wait.h
